# postgres-manager

./: README.md  main.py  pyproject.toml
