[project]
name = "postgres-manager"
version = "0.4.0"
description = "Simple GUI for easily running basic Postgres dump and restore"
authors = [
    { name = "Jakub Wilk", email = "wilkjakub64@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.23.3",
    "psycopg[binary]>=3.2.9",
]
